# data_analysis_template

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/: configs.py  main.py
src/utils/: __init__.py  utility.py
tests/: conftest.py
