[tool.poetry]
name = "cornell_birdcall_identification"
version = "0.1.0"
description = ""
authors = ["ryosukehata <ryosukehata23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
pip = "^20.1.1"
matplotlib = "^3.3.0"
pytest = "^5.4.3"
soundfile = "^0.10.3"
flake8 = "^3.8.3"
kaggle = "^1.5.6"
torch = "^1.5.1"
librosa = "^0.8.0"
opencv-python = "^4.3.0"
plotly = "^4.9.0"
neptune-client = "^0.4.119"
streamlit = "^0.65.2"
xgboost = "^1.2.1"
lightgbm = "^3.0.0"
catboost = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
